[ELYEE-108] Update the project so we can build on Java 25 but target Java 17.